# Course-Optimizer

./: README.md  path_group.py  pyproject.toml  starting1009.py  test_path_optimization.py  track_setup.py
components/: moment_comp.py
