[tool.poetry]
name = "courseoptimizer"
version = "0.1.0"
description = "Vehicle Dependent Course Optimization"
authors = ["Hugo <hugomdomingues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
openmdao = "^3.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
