[tool.poetry]
name = "tracktrajectoryoptimizer"
version = "0.1.0"
description = "Vehicle Dependent Trajectory Optimization of a Continuous Track"
authors = ["Hugo <hugomdomingues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
openmdao = "^3.16.0"
dymos = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
